@@ -32,6 +32,7 @@ New user-visible features
 Bugs fixed
 ----------
 - Bug 2505 - network:  Avoid asserts in Header/Trailer deserialization
+- Bug 2653 - tcp: Avoid saving smaller TS in case of packet reordering
 - Bug 2764 - wifi: WifiSpectrumModelId doesn't distinguish 11ax from legacy
 - Bug 2766 - core:  Modify logging for int64x64 to avoid stack overflow
 - Bug 2824 - ICMP opcode fr fragment timeout drop is wrong
